force-app/main/default/objects/BGBK__Cart__c/BGBK__Cart__c.object-meta.xml
<CustomObject>
    <customHelp>MUSW__HelpInterface</customHelp>
    <label>Cart</label>
    <nameField>
        <label>Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Carts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>