force-app/main/default/objects/BGBK__Cart__c/fields/Action2__c.field-meta.xml
<CustomField>
    <fullName>Action2__c</fullName>
    <formula>HYPERLINK("/apex/c__Cart?cartId=" &amp; Id, "Pay Cart", "_self")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Action</label>
    <type>Text</type>
</CustomField>