force-app/main/default/objects/BGBK__Cart__c/fields/BGBK__Expiration_DateTime__c.field-meta.xml
<CustomField>
    <fullName>BGBK__Expiration_DateTime__c</fullName>
    <label>Expiration Date</label>
    <type>DateTime</type>
</CustomField>