force-app/main/default/objects/BGBK__Cart__c/fields/BGBK__Gateway_Processing__c.field-meta.xml
<CustomField>
    <fullName>BGBK__Gateway_Processing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Gateway Processing</label>
    <type>Checkbox</type>
</CustomField>