force-app/main/default/objects/BGBK__Cart__c/fields/BGBK__Gateway_Response__c.field-meta.xml
<CustomField>
    <fullName>BGBK__Gateway_Response__c</fullName>
    <label>Gateway Response</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>