force-app/main/default/objects/BGBK__Cart__c/fields/BGBK__Last_Payment_Amount__c.field-meta.xml
<CustomField>
    <fullName>BGBK__Last_Payment_Amount__c</fullName>
    <label>Payment Amount</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>