force-app/main/default/objects/BGBK__Cart__c/fields/BGBK__Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>BGBK__Total_Amount__c</fullName>
    <label>Total Amount</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>