force-app/main/default/objects/BGBK__Cart__c/listViews/BGBK__All.listView-meta.xml
<ListView>
    <fullName>BGBK__All</fullName>
    <columns>BGBK__Account__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>